--- a/Coding for juniors official/index.html
+++ b/Coding for juniors official/index.html
@@ -332,10 +332,8 @@
             <div class="col align-self-start">
                 <div class="card text-center" id="why_choose_us_box">
                     <div class="card-body">
-                        <<<<<<< HEAD <img src="/images/home_choose_us_icon1.png" alt="Our Services" class="food-logo">
-                            =======
+                        <img src=images/home_choose_us_icon1.png" alt="Our Services" class="food-logo">
                             <img src="/images/feature_icon2.png" alt="Our Services" class="food-logo">
-                            >>>>>>> 7b297f03c7b65f5ff3bf1e7182b34841eaeb3f32
                             <h5 class="card-title">Learn From The Experts</h5>
                             <p class="card-text">Learning a technology with a professional who is well expertise to
                                 solve
@@ -348,10 +346,8 @@
             <div class="col align-self-end" id="third_row">
                 <div class="card text-center" id="why_choose_us_box">
                     <div class="card-body">
-                        <<<<<<< HEAD <img src="/images/home_choose_us_icon2.png" alt="Our Services" class="food-logo">
-                            =======
+                        <img src="images/home_choose_us_icon2.png" alt="Our Services" class="food-logo">
                             <img src="/images/feature_icon2.png" alt="Our Services" class="food-logo">
-                            >>>>>>> 7b297f03c7b65f5ff3bf1e7182b34841eaeb3f32
                             <h5 class="card-title">Affordable Fees</h5>
                             <p class="card-text">Providing all the courses at an huge disco Providing all the courses at
                                 an huge disco</p>
@@ -379,10 +375,8 @@
             <div class="col align-self-start">
                 <div class="card text-center" id="why_choose_us_box">
                     <div class="card-body">
-                        <<<<<<< HEAD <img src="/images/home_choose_us_icon4.png" alt="Our Services" class="food-logo">
-                            =======
+                       <img src="images/home_choose_us_icon4.png" alt="Our Services" class="food-logo">
                             <img src="/images/feature_icon2.png" alt="Our Services" class="food-logo">
-                            >>>>>>> 7b297f03c7b65f5ff3bf1e7182b34841eaeb3f32
                             <h5 class="card-title">Learn From The Experts</h5>
                             <p class="card-text">Learning a technology with a professional who is well expertise to
                                 solve
@@ -395,10 +389,9 @@
             <div class="col align-self-end" id="third_row">
                 <div class="card text-center" id="why_choose_us_box">
                     <div class="card-body">
-                        <<<<<<< HEAD <img src="/images/home_choose_us_icon5.png" alt="Our Services" class="food-logo">
-                            =======
+                        <img src="images/home_choose_us_icon5.png" alt="Our Services" class="food-logo">
+                          
                             <img src="/images/feature_icon2.png" alt="Our Services" class="food-logo">
-                            >>>>>>> 7b297f03c7b65f5ff3bf1e7182b34841eaeb3f32
                             <h5 class="card-title">Affordable Fees</h5>
                             <p class="card-text">Providing all the courses at an huge disco Providing all the courses at
                                 an huge disco</p>
@@ -409,11 +402,9 @@
             <div class="col align-self-center" id="second_row">
                 <div class="card text-center" id="why_choose_us_box">
                     <div class="card-body">
-                        <<<<<<< HEAD <img src="/images/home_choose_us_icon6.png" alt="Our Services" class="food-logo">
-                            =======
-                            <img src="/images/feature_icon2.png" alt="Our Services" class="food-logo">
-                            >>>>>>> 7b297f03c7b65f5ff3bf1e7182b34841eaeb3f32
-                            <h5 class="card-title">Best Course Materials</h5>
+                          <img src="images/home_choose_us_icon6.png" alt="Our Services" class="food-logo">
+                               <img src="/images/feature_icon2.png" alt="Our Services" class="food-logo">
+                                <h5 class="card-title">Best Course Materials</h5>
                             <p class="card-text">Course contents are designed by our industry experts with upto date
                                 market trending technologies.</p>
                     </div>
@@ -433,7 +424,7 @@
             <h2>Start to learn coding with us!</h2>
             <div id="heighlights">
 
-                <img src="/images/about_feature_icon2.png" alt="loading" class="heighlight_img">
+                <img src="images/about_feature_icon2.png" alt="loading" class="heighlight_img">
 
                 <div class="card border-success mb-3" style="max-width: 18rem;">
                     <!-- <div class="card-header">Header</div> -->
@@ -869,23 +860,7 @@
     <!-- =======sliding manualy by me======= -->
     <script src="/js.js"></script>
     
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
-
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
-
+ 
     <!-- Option 2: jQuery, Popper.js, and Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
