--- a/Coding for juniors official/programs/android.html
+++ b/Coding for juniors official/programs/android.html
@@ -32,7 +32,7 @@
     <!-- <div id="logo " >
           
       <img src="images/logo2.png" class="logo1" alt="Image loading">
-      <h1>Akky OnlineSale</h1> 
+   
   </div> -->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item ">
@@ -55,16 +55,16 @@
           <a class="dropdown-item" href="web-development.html">Web Development</a>
           <a class="dropdown-item" href="android.html">Android Development</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/programs.html">We Serve Eveything in Coding</a>
+          <a class="dropdown-item" href="programs.html">We Serve Eveything in Coding</a>
         </div>
 
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/pricing.html">Pricing</a>
+        <a class="nav-link" href="pricing.html">Pricing</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/blogs.html">Blogs</a>
+        <a class="nav-link" href="blogs.html">Blogs</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">See Demos</a>
@@ -253,10 +253,6 @@
     <h2 class="feature_section_heading"><span class="badge badge-pill badge-warning  ">We will update it soon</span></h2>
 
     <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
     <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
