--- a/Coding for juniors official/programs/java.html
+++ b/Coding for juniors official/programs/java.html
@@ -34,10 +34,10 @@
   </div> -->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item ">
-        <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/about.html">About Us</a>
+        <a class="nav-link" href="about.html">About Us</a>
       </li>
 
       <li class="nav-item dropdown">
@@ -53,16 +53,16 @@
           <a class="dropdown-item" href="web-development.html">Web Development</a>
           <a class="dropdown-item" href="android.html">Android Development</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/programs.html">We Serve Eveything in Coding</a>
+          <a class="dropdown-item" href="programs.html">We Serve Eveything in Coding</a>
         </div>
 
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/pricing.html">Pricing</a>
+        <a class="nav-link" href="pricing.html">Pricing</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/blogs.html">Blogs</a>
+        <a class="nav-link" href="blogs.html">Blogs</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">See Demos</a>
@@ -255,10 +255,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    -->
+  
   </body>
 </html>
