--- a/Coding for juniors official/about.html
+++ b/Coding for juniors official/about.html
@@ -20,13 +20,6 @@
 
   <!-- ====================== Using Bootstrap============================================================================== -->
 
-  <!--   
-      <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div> -->
 
 
   <!-- ======================= NAVBAR HTML ======================= -->
@@ -412,7 +405,7 @@
           Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
       </div>
       <div class="col-md-5" order="md-1">
-        <img src="/images/about_icon1.jpg" alt="Img Loading">
+        <img src="images/about_icon1.jpg" alt="Img Loading">
  
       </div>
 
@@ -428,7 +421,7 @@
             Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
         </div>
         <div class="col-md-5">
-          <img src="/images/about_icon2.jpg" alt="Img Loading">
+          <img src="images/about_icon2.jpg" alt="Img Loading">
         
         </div>
       </div>
