--- a/Coding for juniors official/about.html
+++ b/Coding for juniors official/about.html
@@ -404,7 +404,7 @@
           Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper.
           Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
       </div>
-      <div class="col-md-5" order="md-1">
+      <div class="col-md-5 about_para_img" order="md-1">
         <img src="images/about_icon1.jpg" alt="Img Loading">
  
       </div>
@@ -442,7 +442,7 @@
             Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper.
             Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
         </div>
-        <div class="col-md-5" order="md-1">
+        <div class="col-md-5 about_para_img" order="md-1">
           <img src="images/about_icon3.jpg" alt="Img Loading">
         
         </div>
